# DesktopSharing

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Overlay.cpp  Overlay.h  ScreenLive.cpp  ScreenLive.h  main.cpp
capture/AudioCapture/: AudioBuffer.h  AudioCapture.cpp  AudioCapture.h  WASAPICapture.cpp
capture/ScreenCapture/: GDIScreenCapture.cpp  GDIScreenCapture.h
codec/: H264Encoder.cpp
codec/NvCodec/NvEncoder/: NvEncoderD3D11.cpp  nvEncodeAPI.h
codec/QsvCodec/: QsvEncoder.cpp  common_directx11.h  common_utils.cpp  common_utils_windows.cpp
codec/QsvCodec/src/: mfx_critical_section.cpp  mfx_dispatcher.cpp  mfx_dxva2_device.h  mfx_library_iterator.cpp  mfx_load_dll.cpp  mfx_win_reg_key.h
imgui/: imgui_impl_opengl2.cpp  imgui_impl_win32.cpp
md5/: md5.hpp
net/: EventLoop.cpp  Logger.cpp  Socket.h  TimeStamp.cpp
xop/: DigestAuthentication.cpp  HttpFlvConnection.cpp  HttpFlvConnection.h  HttpFlvServer.cpp  HttpFlvServer.h  MediaSession.cpp  MediaSession.h  MediaSource.h  RtmpClient.cpp  RtmpClient.h  RtmpConnection.cpp  RtmpConnection.h  RtmpPublisher.cpp  RtmpPublisher.h  RtmpServer.cpp  RtmpServer.h  RtmpSession.h  RtpConnection.cpp  RtpConnection.h  RtspConnection.cpp  RtspConnection.h  RtspMessage.h  RtspPusher.cpp  RtspServer.cpp  RtspServer.h  amf.cpp  rtsp.h
